<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UTU</string>
    <string name="title_section1">Úkoly</string>
    <string name="title_section2">Události</string>
    <string name="title_section3">Testy</string>
    <string name="action_settings">Nastavení</string>
    <string name="location">Místo:</string>
    <string name="from">Od:</string>
    <string name="to">Do:</string>
    <string name="datum">Datum</string>
    <string name="subject">Předmět</string>
    <string name="group">Skupina</string>
    <string name="action_refresh">Obnovit</string>
    <string name="action_manual_select">Ruční výběr</string>
    <string name="title_activity_manual_select">Ruční výběr</string>
    <string name="wait">Čekejte prosím</string>
    <string name="loading_data">Probíhá získávání dat</string>
    <string name="unable_to_connect_to_the_internet">Nelze se připojit k internetu</string>
    <string name="try_again">Zkusit znovu</string>
    <string name="load_latest_downloaded_data">Nahrát poslední stažená data</string>
    <string name="cancel">Zrušit</string>
    <string name="beginning_of_choice">Počátek výběru</string>
    <string name="end_of_choice">Konec výběru</string>
    <string name="first">první</string>
    <string name="second">druhá</string>
    <string name="successfully_loaded_from_backup">Internetové připojení není dostupné. Byla použita data ze dne</string>
    <string name="failed_to_load_data">Data nemohla být nahrána. (Internetové připojení je nedostupné a žádná záloha nebyla nalezena)</string>
    <string name="failed_to_load_data_from_backup">Data ze zálohy jsou neplatná. Připojte se k internetu a stáhněte data znovu.</string>
    <string name="view_data">Zobrazit vybraná data</string>
    <string name="login_text">Přihlášení</string>
    <string name="username_email">Přihlašovací jméno (email)</string>
    <string name="password">Heslo</string>
    <string name="login_button">Přihlásit se</string>
    <string name="permanent_login">Zapamatovat údaje</string>
    <string name="or">nebo</string>
    <string name="view_all">Zobrazit vše bez ohledu na uživatele</string>
    <string name="wrong_username_or_password">Špatné uživatelské jméno nebo heslo</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="logging_in">Probíhá přihlašování</string>
    <string name="auto_login">Automaticky přihlásit</string>
    <string name="logging_off">Probíhá odhlašování</string>
    <string name="new_exam">Nový test</string>
    <string name="new_task">Nový úkol</string>
    <string name="new_event">Nová událost</string>
    <string name="title">Název</string>
    <string name="description">Popis</string>
    <string name="more_info_url">Více informací (URL)</string>
    <string name="save">Uložit</string>
    <string name="both_groups">obě skupiny</string>
    <string name="item_was_succesfully_added_to_database">Položka úspěšně přidána do databáze</string>
    <string name="failed_to_add_item">Položku se nepodařilo přidat. (některé položky ve formuláři jsou chybně vyplněny nebo internetové připojení není dostupné)</string>
    <string name="logout">Odhlásit</string>
    <string name="administration">Administrace</string>
    <string name="saving_item_to_database">Probíhá ukládání položky do databáze</string>
    <string name="item_successfully_edited">Položka byla úspěšně upravena</string>
    <string name="failed_to_edit_item">Položku se nepodařilo upravit. (některé položky ve formuláři jsou chybně vyplněny nebo internetové připojení není dostupné)</string>
    <string name="item_updating">Probíhá aktualizace položky v databázi</string>
    <string name="exterminate">Odstranit</string>
    <string name="item_deleting">Probíhá mazání položky</string>
    <string name="item_was_successfully_deleted">Položka byla úspěšně vymazána</string>
    <string name="failed_to_delete_item">Položku se nepodařilo smazat</string>
    <string name="edit_exam">Upravit test</string>
    <string name="edit_task">Upravit úkol</string>
    <string name="hide">Skrýt</string>
    <string name="edit">Upravit</string>
    <string name="open_link_for_more_information">Otevřít odkaz pro více informací</string>
    <string name="hiding_item">"Probíhá skrývání položky"</string>
    <string name="additional_info">Další informace:</string>
    <string name="data_version">Verze dat</string>
    <string name="data_from_backup">Jsou zobrazována data ze dne</string>
    <string name="web_version">Webová verze</string>
    <string name="no_internet_connection_unable_to_add">Nelze se připojit k internetu. Položka nemůže být přidána.</string>
    <string name="no_internet_connection_unable_to_hide">Nelze se připojit k internetu. Položka nemůže být skryta.</string>
    <string name="no_internet_connection_unable_to_delete">Nelze se připojit k internetu. Položka nemůže být odstraněna.</string>

</resources>
