<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_task"
        android:id="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskName"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/addTaskDescription"
        android:hint="@string/description"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskAdditionalInformation"
        android:layout_gravity="center_horizontal"
        android:inputType="textUri"
        android:hint="@string/more_info_url"
        android:layout_marginTop="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskSubject"
        android:spinnerMode="dropdown" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTaskGroup"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        android:id="@+id/addTaskDate"
        android:layout_marginTop="2dp"
        android:onClick="onDateSelectButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/addTaskSaveButton"
        android:layout_marginTop="10dp"
        android:onClick="onSaveButtonClick" />

</LinearLayout>