<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.cendrb.utu.ManualSelect">

    <TextView
        android:id="@+id/manualBeginningLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginning_of_choice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:id="@+id/manualBeginningButton"
        android:layout_below="@+id/manualBeginningLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onBeginningButtonClick"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end_of_choice"
        android:id="@+id/manualEndLabel"
        android:layout_below="@+id/manualBeginningButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:id="@+id/manualEndButton"
        android:onClick="onDateButtonClick"
        android:layout_below="@+id/manualEndLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/manualBeginningButton"
        android:layout_alignEnd="@+id/manualBeginningButton"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group"
        android:id="@+id/manualGroupLabel"
        android:layout_below="@+id/manualEndButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manualGroupSpinner"
        android:layout_below="@+id/manualGroupLabel"
        android:layout_alignLeft="@+id/manualGroupLabel"
        android:layout_alignStart="@+id/manualGroupLabel"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_data"
        android:id="@+id/manualSendButton"
        android:layout_toEndOf="@+id/manualGroupLabel"
        android:layout_below="@+id/manualGroupSpinner"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/manualGroupSpinner"
        android:layout_alignStart="@+id/manualGroupSpinner"
        android:layout_alignRight="@+id/manualGroupSpinner"
        android:layout_alignEnd="@+id/manualGroupSpinner"
        android:onClick="onViewButtonClick" />

</RelativeLayout>
