<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Title"
        android:id="@+id/taskTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="description"
        android:id="@+id/taskDescription"
        android:layout_below="@+id/taskTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/datum"
        android:id="@+id/taskDatumLabel"
        android:layout_below="@+id/taskDescription"
        android:layout_alignLeft="@+id/taskDescription"
        android:layout_alignStart="@+id/taskDescription"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subject"
        android:id="@+id/taskSubjectLabel"
        android:textStyle="bold"
        android:layout_below="@+id/taskDatumLabel"
        android:layout_alignLeft="@+id/taskDatumLabel"
        android:layout_alignStart="@+id/taskDatumLabel"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/group"
        android:id="@+id/taskGroupLabel"
        android:textStyle="bold"
        android:layout_below="@+id/taskSubjectLabel"
        android:layout_alignLeft="@+id/taskSubjectLabel"
        android:layout_alignStart="@+id/taskSubjectLabel"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1. 9. 2009"
        android:id="@+id/taskDatum"
        android:layout_toEndOf="@+id/taskDescription"
        android:layout_toRightOf="@+id/taskDatumLabel"
        android:layout_alignTop="@+id/taskDatumLabel"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="MA"
        android:id="@+id/taskSubject"
        android:layout_toEndOf="@+id/taskDescription"
        android:layout_alignTop="@+id/taskSubjectLabel"
        android:layout_alignLeft="@+id/taskDatum"
        android:layout_alignStart="@+id/taskDatum" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="první"
        android:id="@+id/taskGroup"
        android:layout_toEndOf="@+id/taskDescription"
        android:layout_alignTop="@+id/taskGroupLabel"
        android:layout_alignLeft="@+id/taskSubject"
        android:layout_alignStart="@+id/taskSubject" />
</RelativeLayout>